# spe_ed_abgabe

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  requirements.txt  save_docker.txt
src/: game.py  main.py  philipp.py  util.py  websocket.py
src/spe_ed_rust/: Cargo.toml  multi.txt  philipp.py
src/spe_ed_rust/spe_ed_lib/: __init__.py
src/spe_ed_rust/src/: action.rs  base.rs  lib.rs
src/templates/: main.js  render.html  stilo.css
