[package]
name = "spe_ed_rust"
version = "0.1.0"
authors = ["Theoyor <59316058+Theoyor@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spe_ed_lib"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.1"
json = "0.12.4"
num = "0.3.1"

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]

